# ffmpeg_image_transport

./: CMakeLists.test.txt  CMakeLists.txt  ffmpeg_notes.md
include/ffmpeg_image_transport/: cuda_encoder.hpp  ffmpeg_encoder.hpp  types.hpp
src/: cuda_encoder.cu  ffmpeg_encoder.cpp  test.cu  test_hw_frames.cpp
